center logo, fix email wrap

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  height: 80vh;
+  height: 97vh;
   /* width: 100vw; */
   display: flex;
   justify-content: center;
@@ -50,7 +50,6 @@ body {
   /* width: 40vw; */
   display: flex;
   text-align: left;
-  height: 30px;
   position: fixed;
   bottom: 0px;
   left: 10px;
